# chat-kg-vec-app

./: .env.example  .gitignore  README.md  docker-compose.yml
chat-rag-services/: CHAT_SYSTEM.md  Dockerfile  README.md  app.py  project_structure_suggestions.md  pyproject.toml  run_server.sh  running_qna.py  server.py  try_app.py
chat-rag-services/app/: main.py
chat-rag-services/app/api/: dependencies.py
chat-rag-services/app/core/: config.py
chat-rag-services/app/db/: graph_db.py  llm.py
chat-rag-services/app/models/: chat.py  document.py  templates.py
chat-rag-services/app/services/: chat.py  documents.py  graph.py
chat-rag-services/src/: __init__.py  config.py  controller.py  graph_query_tools.py  llm.py  qa_processor.py  templates.py
chat-rag-services/src/client/: llm.py
chat-rag-services/src/processor/: completions.py  context_retriever.py  qa_tools.py
chat-ui/: Dockerfile  README.md  (+3 more)
file-ingestion-service/: Dockerfile  README.md  app.py  pyproject.toml  run_server.sh  server.py  try_app.py
file-ingestion-service/src/: __init__.py  config.py  controller.py  extractor.py  graph_dao.py  graph_db.py  llm.py  main.py  utils.py
file-ingestion-service/src/client/: graph_db.py  llm.py
file-ingestion-service/src/models/: __init__.py  chunk.py  chunk_data.py  document.py  source_node.py
file-ingestion-service/src/processor/: document.py  embedding.py  graph.py  graph_documents.py  process.py  relation.py
file-ingestion-service/src/utils/: __init__.py  chunker.py  file_tools.py
file-ingestion-service/tests/: parse_pdf_to_graph_data.py
(+15 files in other folders)
